Fixed whitespace sending and implemented mentioning

--- a/client/src/less/harm.less
+++ b/client/src/less/harm.less
@@ -42,6 +42,19 @@ body {
                 font-size: 0.8em;
                 font-weight: bold;
             }
+            .me {
+                color: pink;
+                padding: 2px;
+                padding-right: 4px;
+                font-size: 0.8em;
+                font-weight: bold;
+            }
+            .highlight {
+                padding: 2px 4px 2px 2px;
+                font-weight: bold;
+                background-color: #ccc;
+                color: maroon;
+            }
 			.privateMsg {
 				color: red;
                 padding: 2px;
